chandeliers-lus/tests/fail/ui/tc/extern/missing-const.rs
chandeliers_lus::decl! {
    extern const MISSING: float;

    node foo() returns (f : float);
    let
        f = MISSING;
    tel;
}

fn main() {}
